1.14 (2007-08-29)
-----------------
* --ignore-host can now be specified multiple times
* update support for amavis-milter (Joachim de Groot)
* update support for amavisd-new (Pawel Madej)

1.13 (2007-03-28)
-----------------
* New mailgraph homepage URL: http://mailgraph.schweikert.ch
* XHTML 1.0 strict output (Yllar Pajus)
* add releative jump points (Hugo van der Kooij)
* add commented-out code for clamassassin (Adrian von Bidder)
* add support for Amavisd-new >= 2.4 (Christoph Kessinger)
* add support for Borderware Mxtreme (Postfix variant, Johan Nilsson)
* add support for the ClamAV SpamAssassin plugin (Thomas Brown)
* add support for MxTreme mail gateway (Guido)
* update support for Kaspersky AntiVirus (Igor Moskovko)
* update support for AntiVir (Wolfram Schlich)
* update support for drweb (Lev)
* update support for MailScanner (Simon Hartl, Pierre-Yves Bonnetain)
* update support for AntiVir (Frank Urban)
* fix DST-switch timewarp in autumn (Parse::Syslog 1.09)
* fix hidden rejected line behind area items (Axel Beckert)
* fix virbl DNS name (Eddy Beliveau)

1.12 (2005-10-16)
-----------------
* sendmail fixes (Ben Lentz, R. Scott Baer)
* compatibility with rrdtool 1.2.0 and 1.2.1 (no --slope-mode)
* compatibility with SpamAssassin 3.1.0 (Matias Lopez Bergero)
* add support for newer Vexira versions (Alexandru Suchici)
* sendmail fixes (Immo Goltz)
* ensure that the correct RRA is always chosen
* nice -19 for mailgraph.pl in example init script (Alexander Norman)

1.11 (2005-06-05)
-----------------
* add support for clamsmtpd (Aaron Wolfe)
* add support for AVMilter (Stephan A. Klein)
* add chkconfig to init script (DanielC)
* add support for bogofilter (Erwan David)
* add support for Kaspersky anti SPAM (Igor Moskovko)
* add --virbl-is-spam (Cyriel de Grijs)
* detect as virus mails blocked by amavis by file-extension
* sendmail fixes (Alexander Bochmann)
* compatibility with RRDtool 1.2.x
* document the --logtypes
* recognize postfix/error bounces