@@ -1,8 +1,9 @@
 1.14 (2007-08-29)
 -----------------
-* --ignore-host can now be specified multiple times
+* add support for SpamAssassin milter (Todd A. Green)
 * update support for amavis-milter (Joachim de Groot)
 * update support for amavisd-new (Pawel Madej)
+* --ignore-host can now be specified multiple times
 
 1.13 (2007-03-28)
 -----------------
